change index.html title

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Date/Time Picker for Twitter Bootstrap">
     
     <meta name="author" content="mij">
-    <title>Bootstrap Date/Time Picker</title>
+    <title>Toil and flexi</title>
 
     <link href="http://tarruda.github.io/bootstrap-datetimepicker/assets/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/bootstrap-datetimepicker.min.css">
